# racecar

./: .gitignore  ADOPT.md  CHANGELOG.md  CLAUDE.md  COMMITS.md  CRITIC.md  GLOSSARY.md  LICENSE  Makefile  PERSONA.md  PLAN.md  README.md  SKILL.md  TODO.md  install  pyproject.toml
arch-coherence/: AXIOMS.md  CLI.md  DJANGO.md  FACES.md  GENERATION.md  PACKAGING.md  PYTHON.md  README.md  SKILL.md
arch-coherence/lib/: _cli.py
arch-coherence/scripts/: check_cli_commands.py  check_dj_model_ref_as_string.py  check_face_orchestration.py  check_packaging.py  check_string_relations.py  check_upward_imports.py  migrate_shape.py  scaffold_surfaces_templates.py  scaffold_web_face.py  scaffold_web_face_templates.py
arch-coherence/scripts/check_packaging_rules/: __init__.py  _changelog.py  _common.py  _constants.py  _djapp.py  _findings.py  _forbidden.py  _gitignore.py  _makefile.py  _precommit.py  _pyproject.py  _requirements.py  _shape.py  _version.py
arch-coherence/tests/: test_check_cli_commands.py  test_check_dj_model_ref_as_string.py  test_check_face_orchestration.py  test_check_packaging.py  test_check_string_relations.py  test_check_upward_imports.py
commit/: SKILL.md
core/: DOCS.md  SYSTEM.md  TODO.md
deploy/: README.md  SKILL.md
doc-coherence/: PROTOCOL.md  README.md  SKILL.md
doc-coherence/scripts/: check_docs.py  check_file_placement.py  check_subsystem_docs.py  check_todo_format.py
doc-coherence/tests/: test_check_docs.py  test_check_file_placement.py  test_check_subsystem_docs.py
docs/racecar/: RACECAR.md
docs/summary/: RACECAR.md
doctor/: SKILL.md
drafts/: ai-native-essay-v2.md  ai-native-essay.md  ai-native-spine.md  dag-worldview-essay.md  landing-hero.md
eng-review/: DJANGO.md  PYTHON.md  README.md  SKILL.md  WORKFLOW.md
expert/: EXPERT.md
hooks/: claude_racecar_hook.sh  compound-command-allow.sh  precompact_history.py  session_compact_history.py  session_load_standards.py
llm-summary/: README.md  SKILL.md  SPEC.md
llm-summary/scripts/: check_brief.py
normalize/: SKILL.md
python/: DJANGO.md  PYTHON.md
reshape/: README.md  SKILL.md
scripts/: check_changelog.py  clean_files.sh  doctor.py  init_project.py  install_system_deps.sh  sync_claude_md.py  sync_md_to_obsidian.py  sync_remote.py  sync_scripts.py
scripts/tests/: test_check_changelog.py  test_doctor.py  test_init_project.py
shared/: BATCHING.md  COMMITS.md  DRIFT.md  GLOSSARY.md  OPERATIONAL.md  OWNERSHIP.md  TODO_FORMAT.md  VOICE.md
templates/classic/: Makefile  djapp-pyproject.toml  gitignore  install_system_deps.sh  library-pyproject.toml  pre-commit-config.yaml  pyproject.toml  racecar.mk
templates/ruff/: Makefile  pre-commit-config.yaml  pyproject.toml
templates/scripts/: check_upward_imports.py
upgrade/: README.md  SKILL.md
(+1 files in other folders)
